<resources>
    <string name="app_name">WhatToSee</string>
    <string name="forrestGampName">Форест Гамп</string>
    <string name="greenMileName">Зеленая миля</string>
    <string name="gladiatorName">Гладиатор</string>
    <string name="inceptionName">Начало</string>
    <string name="interstellarName">Интерстеллар</string>
    <string name="intouchablesName">1+1</string>
    <string name="pulpFictionName">Криминальное чтиво</string>
    <string name="schindlersListName">Список Шиндлера</string>
    <string name="shawshankRedemptionName">Побег из Шаушенка</string>
    <string name="shutterIslandName">Остров проклятых</string>
    <string name="toFavorites">В избранное</string>
    <string name="forrestGampDescription">Сидя на автобусной остановке, Форрест Гамп — не очень умный, но добрый и открытый парень — рассказывает случайным встречным историю своей необыкновенной жизни. С самого малолетства парень страдал от заболевания ног, соседские мальчишки дразнили его, но в один прекрасный день Форрест открыл в себе невероятные способности к бегу. Подруга детства Дженни всегда его поддерживала и защищала, но вскоре дороги их разошлись.</string>
    <string name="greenMileDescription">Пол Эджкомб — начальник блока смертников в тюрьме «Холодная гора», каждый из узников которого однажды проходит «зеленую милю» по пути к месту казни. Пол повидал много заключённых и надзирателей за время работы. Однако гигант Джон Коффи, обвинённый в страшном преступлении, стал одним из самых необычных обитателей блока.</string>
    <string name="gladiatorDescription">В великой Римской империи не было военачальника, равного генералу Максимусу. Непобедимые легионы, которыми командовал этот благородный воин, боготворили его и могли последовать за ним даже в ад. Но случилось так, что отважный Максимус, готовый сразиться с любым противником в честном бою, оказался бессилен против вероломных придворных интриг. Генерала предали и приговорили к смерти. Чудом избежав гибели, Максимус становится гладиатором. Быстро снискав себе славу в кровавых поединках, он оказывается в знаменитом римском Колизее, на арене которого он встретится в смертельной схватке со своим заклятым врагом…</string>
    <string name="inceptionDescription">Кобб – талантливый вор, лучший из лучших в опасном искусстве извлечения: он крадет ценные секреты из глубин подсознания во время сна, когда человеческий разум наиболее уязвим. Редкие способности Кобба сделали его ценным игроком в привычном к предательству мире промышленного шпионажа, но они же превратили его в извечного беглеца и лишили всего, что он когда-либо любил. И вот у Кобба появляется шанс исправить ошибки. Его последнее дело может вернуть все назад, но для этого ему нужно совершить невозможное – инициацию. Вместо идеальной кражи Кобб и его команда спецов должны будут провернуть обратное. Теперь их задача – не украсть идею, а внедрить ее. Если у них получится, это и станет идеальным преступлением…</string>
    <string name="shawshankRedemptionDescription">Бухгалтер Энди Дюфрейн обвинён в убийстве собственной жены и её любовника. Оказавшись в тюрьме под названием Шоушенк, он сталкивается с жестокостью и беззаконием, царящими по обе стороны решётки. Каждый, кто попадает в эти стены, становится их рабом до конца жизни. Но Энди, обладающий живым умом и доброй душой, находит подход как к заключённым, так и к охранникам, добиваясь их особого к себе расположения.</string>
    <string name="interstellarDescription">Когда засуха, пыльные бури и вымирание растений приводят человечество к продовольственному кризису, коллектив исследователей и учёных отправляется сквозь червоточину (которая предположительно соединяет области пространства-времени через большое расстояние) в путешествие, чтобы превзойти прежние ограничения для космических путешествий человека и найти планету с подходящими для человечества условиями.</string>
    <string name="intouchablesDescription">Пострадав в результате несчастного случая, богатый аристократ Филипп нанимает в помощники человека, который менее всего подходит для этой работы, – молодого жителя предместья Дрисса, только что освободившегося из тюрьмы. Несмотря на то, что Филипп прикован к инвалидному креслу, Дриссу удается привнести в размеренную жизнь аристократа дух приключений.</string>
    <string name="pulpFictionDescription">Двое бандитов Винсент Вега и Джулс Винфилд ведут философские беседы в перерывах между разборками и решением проблем с должниками криминального босса Марселласа Уоллеса. В первой истории Винсент проводит незабываемый вечер с женой Марселласа Мией. Во второй рассказывается о боксёре Бутче Кулидже, купленном Уоллесом, чтобы сдать бой. В третьей истории Винсент и Джулс по нелепой случайности попадают в неприятности.</string>
    <string name="schindlersListDescription">Фильм рассказывает реальную историю загадочного Оскара Шиндлера, члена нацистской партии, преуспевающего фабриканта, спасшего во время Второй мировой войны почти 1200 евреев.</string>
    <string name="shutterIslandDescription">Два американских судебных пристава отправляются на один из островов в штате Массачусетс, чтобы расследовать исчезновение пациентки клиники для умалишенных преступников. При проведении расследования им придется столкнуться с паутиной лжи, обрушившимся ураганом и смертельным бунтом обитателей клиники.</string>
    <string name="saveButtonText">Сохранить</string>
    <string name="commentHint">Комментарий</string>
    <string name="inviteText">Привет, давай вместе посмотрим фильм \"%s\"</string>
    <string name="inviteSuccess">Приглашение отправленно!</string>
    <string name="inviteButtonText">Посмотреть вместе с другом</string>
    <string name="favoriteTitle">Избранное</string>
    <string name="successStr">Успешно</string>
    <string name="goToFavorites">В избранное</string>
    <string name="successRemovedStr">Удаленно из избранного</string>
    <string name="cancel">Отмена</string>
    <string name="defaultShortDescription">Мне лень писать, тут какое то описание, бла бла бла …</string>
</resources>